tests/baselines/reference/declarationMaps.errors.txt
declarationMaps.ts(18,10): error TS2454: Variable 'm2' is used before being assigned.


==== declarationMaps.ts (1 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    var m2: {
        (): m2.connectExport;
        test1: m2.connectModule;
        test2(): m2.connectModule;
    };
    
    export = m2;
             ~~
!!! error TS2454: Variable 'm2' is used before being assigned.